gatekeeper-constraint-templates/block-external-services.yaml
apiVersion: templates.gatekeeper.sh/v1
kind: ConstraintTemplate
metadata:
  name: k8sblockexternalservices
  annotations:
    description: "Disallows all Services with type LoadBalancer."
spec:
  crd:
    spec:
      names:
        kind: K8sBlockExternalServices
  targets:
    - target: admission.k8s.gatekeeper.sh
      rego: |
        package k8sblockexternalservices
        violation[{"msg": msg}] {
          input.review.kind.kind == "Service"
          input.review.object.spec.type == "LoadBalancer"
          msg := "User is not allowed to create service of type LoadBalancer"
        }
